[package]
name = "confidential-transfer"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "2.0.1"
solana-sdk = "2.0.1"
solana-client = "2.0.1"
spl-token-client = "0.11.0"
spl-token-2022 = "4.0.0"
spl-associated-token-account = "4.0.0"
spl-transfer-hook-interface = "0.7.0"

axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1.37.0", features = ["macros"] }
tower-http = { version = "0.5.0", features = ["cors"] }
serde = "1.0.198"
serde_json = "1.0.116"
bincode = "1.3.3"
base64 = "0.22.1"
anyhow = "1.0.86"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3.30"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1.0"
spl-token = "6.0.0"
